# solana-wallet-adapter

./: Cargo.toml  README.md
base/: Cargo.toml
base/src/: clusters.rs  commitment.rs  events.rs  random.rs  sign_in.rs  version.rs
common/: Cargo.toml
common/src/: clusters.rs  commitment.rs  events.rs  lib.rs  version.rs
crate/: Cargo.toml
crate/src/: adapter.rs  errors.rs  events.rs  lib.rs  storage.rs
crate/src/wallet_ser_der/: wallet.rs  wallet_account.rs
crate/src/wallet_ser_der/standard_features/: features.rs  sign_tx.rs
templates/: README.md
templates/dioxus-adapter/: Cargo.toml
templates/dioxus-adapter-anchor/: Anchor.toml  Cargo.toml
templates/dioxus-adapter-anchor/.cargo/: config.toml
templates/dioxus-adapter-anchor/frontend/: Cargo.toml  Dioxus.toml  README.md  tailwind.css
templates/dioxus-adapter-anchor/frontend/assets/: tailwind.css
templates/dioxus-adapter-anchor/frontend/src/: app.rs  fetch_parser.rs  fetch_util.rs  header.rs  main.rs  utils.rs
templates/dioxus-adapter-anchor/frontend/src/views/: accounts.rs  airdrop.rs  clusters.rs  receive_sol.rs  send_sol.rs
templates/dioxus-adapter-anchor/frontend/src/views/extras_views/: sign_message.rs  sign_tx.rs  siws.rs
templates/dioxus-adapter-anchor/programs/{{crate_name}}-program/: Cargo.toml
templates/dioxus-adapter-anchor/programs/{{crate_name}}-program/src/: lib.rs
templates/dioxus-adapter-anchor/tests/: {{crate_name}}-anchor.ts
templates/dioxus-adapter/src/: fetch_parser.rs
templates/dioxus-adapter/src/views/extras_views/: sign_tx.rs
wallet-adapter-book/src/templates/: message-storage.md
wallet-adapter-common/: Cargo.toml
wallet-adapter-common/src/: feature_support.rs  standardized_events.rs  utils.rs  wallet.rs
wallet-adapter-common/src/signin_standard/: signin.rs
