[workspace]
members = ["base", "crate", "partial-idl-parser", "wallet-adapter-common"]
resolver = "2"

[workspace.package]
version = "1.3.1"
authors = ["448-OG <superuser@448.africa>"]
description = "Solana Wallet Adapter for Rust clients written in pure Rust"
homepage = "https://github.com/JamiiDao"
readme = "./README.md"
keywords = ["solana", "solana-pay", "wallet", "blockchain", "wallet-adapter"]
categories = ["cryptography::cryptocurrencies"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/JamiiDao/SolanaWalletAdapter"
edition = "2021"
rust-version = "1.84"

[workspace.dependencies]
wallet-adapter = { path = "./crate" }
wallet-adapter-common = { path = "./wallet-adapter-common" }
wallet-standard-base = { path = "./base", version = "0.1.8" }

base64ct = { version = "1.8.0", features = ["alloc"] }
blake3 = { version = "1.8", default-features = false }
ed25519-dalek = { version = "2.2.0", default-features = false, features = [
    "std",
    "signature",
    "fast",
] }
async-channel = "2.5.0"
log = "0.4"
wasm-bindgen-futures = "0.4"
bs58 = "0.5.1"
humantime = { version = "2.2.0", default-features = false }
rand_chacha = { version = "0.10.0", default-features = false }
rand_core = "0.10"
thiserror = { version = "2.0", default-features = false }
async-lock = "3.4"
zeroize = { version = "1.8.1", default-features = false }

[workspace.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Event",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "Element",
    "HtmlElement",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "PointerEvent",
    "Clipboard",
    "Navigator",
    "console",
    "HtmlLabelElement",
    "CssStyleDeclaration",
]

[profile.release]
opt-level = "s"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
opt-level = 1
inherits = "dev"
