[package]
name = "wallet-standard-base"
version = "0.1.8"
authors.workspace = true
description = "The base features required by wallet-standard"
homepage.workspace = true
readme.workspace = true
keywords = ["wallet-adapter", "wallet-adapter-base", "wallet-standard"]
categories.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true


[features]
default = ["required", "random_bytes", "signIn"]
required = []
random_bytes = ["dep:zeroize", "dep:rand_core", "dep:rand_chacha"]
signIn = ["required", "random_bytes", "dep:humantime", "dep:blake3"]

[dependencies]
bs58 = { workspace = true }
base64ct = { workspace = true, features = ["alloc"] }
thiserror = { workspace = true, default-features = false }
rand_chacha = { workspace = true, optional = true, default-features = false }
rand_core = { workspace = true, optional = true }
blake3 = { workspace = true, default-features = false, optional = true }
humantime = { workspace = true, default-features = false, optional = true }

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
zeroize = { workspace = true, default-features = false, optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
zeroize = { workspace = true, default-features = false, optional = true, features = [
    "aarch64",
] }
