[package]
name = "wallet-adapter"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
async-channel.workspace = true
web-sys.workspace = true
thiserror.workspace = true
wasm-bindgen-futures.workspace = true
humantime.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
getrandom.workspace = true
bs58.workspace = true
sha3.workspace = true
async-lock.workspace = true
wallet-adapter-common.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
solana-sdk = "2.2.2"
bincode = "1.3.3"
jzon = "0.12.5"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
