[package]
name = "wallet-adapter"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
async-channel.workspace = true
web-sys.workspace = true
thiserror.workspace = true
wasm-bindgen-futures.workspace = true
humantime.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
bs58.workspace = true
blake3.workspace = true
async-lock.workspace = true
wallet-adapter-common.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
solana-sdk = "4.0.1"
jzon = "0.12.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
bincode = "1"
