[package]
name = "{{project-name}}"
version = "2.0.0"
authors = ["{{authors}}"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }

wallet-adapter = "1.4.2"
bincode = "=1.3.3"
jzon = "0.12.5"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
gloo-timers = "0.3.0"
qrcodegen = "1.8.0"
percent-encoding = "2.3.1"
solana-transaction-error = { version = "3.0.0", default-features = false }
solana-transaction = { version = "4.0.0", features = ["serde"] }
solana-instruction = { version = "3.1.0", features = ["borsh"] }
solana-pubkey = { version = "4.1.0", features = ["borsh"] }
solana-hash = "4.2.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
anchor-lang-idl = { version = "0.1.2", features = ["convert"] }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
